--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         
             <img src="images/category-1.jpg"></div>
              <div class="col-3">
-                 <img src="images/images/category-2.jpg">
+                 <img src="images/category-2.jpg">
             </div>
              <div class="col-3">
                  <img src="images/category-3.jpg">
